frontend/src/App.css
/* ... */
@media only screen and (max-width: 702px) {
  .body {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100dvh;
    overflow: hidden;
  }

  .mid {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 92dvh;
  }

  .left {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 8dvh;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    z-index: 100;
  }
  .messagebox {
    height: 92dvh;
    width: 100dvw;
    grid-area: 1 / 1 / 2 / 2;
    color: black;
    background-color: white;
  }

  .newgroup {
    position: fixed;
    top: 0;
    left: 0;
    height: 92dvh;
    width: 100%;
    padding: 16px;
    background-color: white;
    color: black;
  }

  .imgcontainer {
    display: none;
  }
  .profile {
    height: 92dvh;
    width: 100dvw;
  }
  .groupinfo {
    font-size: 15px;
  }
  .messagebox .groupinfo {
    margin-left: -30px;
  }

  h1 {
    font-size: 60%;
  }
  .form h2 {
    font-size: 60%;
  }
  .profcollright,
  .collleft,
  .collright,
  .ngright {
    display: block !important;
  }

  .collapse {
    display: none !important;
  }

  .collleft {
    display: flex;
    align-items: center;
    margin-left: 20px;
  }

  .newgroup input {
    max-width: 200px;
  }

  .topbuttons {
    gap: 5px;
    flex-direction: column;
  }
  .topbuttons button {
    width: 30px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 10px;
  }
  .chatinfotop .avatar {
    max-width: 50px;
    max-height: 50px;
  }

  .profilebackground {
    min-height: 30dvh;
  }
  .closeprof {
    width: 48px;
    height: 48px;
    right: 0px;
    top: 0px;
  }
  .profcollright {
    width: 36px;
    height: 36px;
    right: 0px;
    top: 0px;
  }

  .profile textarea {
    max-width: 50dvw;
  }

  .chatmenutop {
    padding-left: 20px;
  }

  .biodiv p,
  .xmargin p {
    width: 80%;
    height: 20dvh;
    word-wrap: break-word;
    overflow-y: auto;
  }
  .xmargin {
    max-height: 60dvh;
  }

  .biodiv textarea {
    min-width: 250px;
    min-height: 10dvh;
  }
  .chatdeletediv button {
    height: 50px;
    width: 70px;
    font-weight: bold;
    font-size: 15px;
  }
  .login {
    font-size: 15px;
  }
  .grouped {
    gap: 50px;
  }
  .overflowdiv {
    position: absolute;
    top: 15dvh;
    left: 0;
    right: 0;
    bottom: 5dvh;
    height: 77dvh;
    overflow-y: auto;
  }

  .searchbar,
  .select {
    padding: 6px;
  }

  .message {
    max-width: 95%;
  }

  .azure {
    max-width: 65dvw;
  }

  .azure.imgmessage {
    max-width: 85dvw;
  }

  .imgmessage img {
    max-width: 100%;
    max-height: 40dvh;
  }
}

